add login  view

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -13,8 +13,8 @@
     <h1 style="text-align: center; font-size: 50px;">Welcome!</h1>
     <p id="homepage-info-text">Schoolwork Hub is the place to be when you are studying, doing homework, or simply need help. We
        have 24/7 chatbots roaming in the wilderness if you need them. If you would like to get help from
-       a human volunteer, that is also an option. 100% free. No credit card. No questions.
-
+       a human volunteer, that is also an option. 100% free. No credit card. No questions.</p>
+  </div>
 <script src="../js/index.js"></script>
 
 </html>
