--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -10,9 +10,10 @@
 
 <body>
   <div class="container-fluid">
-    <form url='/auth/login'>
+    <form url='/auth/signup' method='POST'>
       <input type='text' placeholder='Username' name='username'>
       <input type='password' placeholder='Password' name='password'>
+      <input type='email' placeholder='Email' name='email'>
       <input type='submit' value='Log In'>
     </form>
   </div>
