--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,10 +10,11 @@
 
 <body>
   <div class="container-fluid">
-    <form url='/auth/login'>
+    <form action='/auth/login'>
       <input type='text' placeholder='Username' name='username'>
       <input type='password' placeholder='Password' name='password'>
       <input type='submit' value='Log In'>
+      <input type="hidden" name="resulturl" value="/">
     </form>
   </div>
 <script src="../js/index.js"></script>
