--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -10,11 +10,12 @@
 
 <body>
   <div class="container-fluid">
-    <form url='/auth/signup' method='POST'>
+    <form action='/auth/signup' method='POST'>
       <input type='text' placeholder='Username' name='username'>
       <input type='password' placeholder='Password' name='password'>
       <input type='email' placeholder='Email' name='email'>
       <input type='submit' value='Log In'>
+      <input type="hidden" name="resulturl" value="/">
     </form>
   </div>
 <script src="../js/index.js"></script>
