--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,6 +1,19 @@
-h1{
-  color: blue;
+#homepage-info-text{
+  margin-left: 20%;
+  margin-right: 20%;
+  font-size: 20px;
 }
-body{
-  background-color: blue;
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
