finish signup login pages

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,9 +21,9 @@
             <a class="p-2 text-dark" href="#">Features</a>
             <a class="p-2 text-dark" href="#">Support</a>
             <a class="p-2 text-dark" href="#">Donate</a>
-            <a class="p-2 text-dark" href="#">Login</a>
+            <a class="p-2 text-dark" href="/login">Login</a>
         </nav>
-        <a class="btn btn-outline-primary" href="#">Sign up</a>
+        <a class="btn btn-outline-primary" href="/signup">Sign up</a>
     </div>
 </header>
 
