--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-outline-primary" href="#">Sign up</a>
+                <a class="btn btn-outline-primary" href="/signup">Sign up</a>
             </li>
         </ul>
     </nav>
