--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -33,14 +33,16 @@
             </li>
 
         </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="btn btn-outline-primary" href="/signup">Sign up</a>
-            </li>
-        </ul>
+        <% if (typeof req.cookies.session != 'string')  {%>
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                  <a class="btn btn-outline-primary" href="/signup">Sign up</a>
+              </li>
+          </ul>
+        <% } %>
     </nav>
 </header>
 
