--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -42,6 +42,12 @@
                   <a class="btn btn-outline-primary" href="/signup">Sign up</a>
               </li>
           </ul>
+        <% } else { %>
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="/auth/logout">Logout</a>
+              </li>
+          </ul>
         <% } %>
     </nav>
 </header>
