Finished form styles

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -9,25 +9,17 @@
 </header>
 
 <body>
-  <div class="container-fluid">
-    <form action='/auth/signup' method='POST'>
-      <input type='text' placeholder='Username' name='username'>
-      <input type='password' placeholder='Password' name='password'>
-      <input type='email' placeholder='Email' name='email'>
-      <input type='submit' value='Log In'>
-    </form>
-  </div>
 
   <div class="container-fluid">
       <form style="margin-right: 30%; margin-left: 30%" class="form-signin" action='/auth/signup'>
-          <h2 class="form-signin-heading">Please sign in</h2>
+          <h2 class="form-signin-heading">Please sign up</h2>
           <label for="inputEmail" class="sr-only">Username</label>
           <input class="form-control" type='text' placeholder='Username' name='username' required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
           <input class="form-control" type='password' placeholder='Password' name='password' required>
-          <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign in</button>
           <label for="inputPassword" class="sr-only">Email</label>
           <input class="form-control" type='email' placeholder='Email' name='email' required>
+          <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign in</button>
         </form>
         </div>
 <script src="../js/index.js"></script>
