--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,7 @@
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Schoolwork Hub</a>
+        <a class="navbar-brand" href="/">Schoolwork Hub</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">Home
