--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -19,7 +19,7 @@
           <input class="form-control" type='password' placeholder='Password' name='password' required>
           <label for="inputPassword" class="sr-only">Email</label>
           <input class="form-control" type='email' placeholder='Email' name='email' required>
-          <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign in</button>
+          <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign up</button>
         </form>
         </div>
 <script src="../js/index.js"></script>
