--- a/src/public/style.css
+++ b/src/public/style.css
@@ -2,7 +2,19 @@
   margin-left: 20%;
   margin-right: 20%;
   font-size: 20px;
+  text-align: center;
+  background-color:
 }
+
+.glyphicons{
+  width: 200px;
+  display: inline-block;
+  text-align: center;
+  margin:0 auto;
+  display: block;
+}
+
+
 
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
@@ -16,4 +28,81 @@
     display: block;
     text-align: left;
   }
+}
+
+body {
+  background: #F8F8FF !important;
+}
+
+.center-con {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.round {
+  position: relative;
+  border: 3px solid black;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  margin-top: -30%;
+}
+
+span {
+  z-index: 999;
+  height: 3px;
+  margin:1px;
+  width: 30px;
+  background: black;
+  transition: 0.4s ease;
+}
+
+span:first-child {
+  display: block;
+  position: absolute;
+  transform: rotate(45deg);
+  left: 25%;
+  bottom: 35%;
+}
+
+span:nth-child(2) {
+  display: block;
+  position: absolute;
+  transform: rotate(-45deg);
+  left: 45%;
+  bottom: 35%;
+}
+
+span:nth-child(3) {
+  display: block;
+  position: absolute;
+  transform: rotate(45deg);
+  left: 25%;
+  bottom: 54%;
+}
+
+span:nth-child(4) {
+  display: block;
+  position: absolute;
+  transform: rotate(-45deg);
+  left: 45%;
+  bottom: 54%;
+}
+
+.round:hover span:nth-child(1) {
+  transform: rotate(-135deg);
+}
+
+.round:hover span:nth-child(2) {
+  transform: rotate(135deg);
+}
+
+.round:hover span:nth-child(3) {
+  transform: rotate(225deg);
+}
+
+.round:hover span:nth-child(4) {
+  transform: rotate(-225deg);
 }
