--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Schoolwork Hub</title>
+  <title>Login</title>
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <header>
