--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schoolwork Hub</title>
+  <title>Signup</title>
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <header>
