--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,6 +3,11 @@
 
 <head>
     <title></title>
+    
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
@@ -34,25 +39,26 @@
 
         </ul>
         <% if (typeof req.cookies.session != 'string')  {%>
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                  <a class="btn btn-outline-primary" href="/signup">Sign up</a>
-              </li>
-          </ul>
-        <% } else { %>
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="/auth/logout">Logout</a>
-              </li>
-          </ul>
-        <% } %>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary" href="/signup">Sign up</a>
+                </li>
+            </ul>
+            <% } else { %>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/logout">Logout</a>
+                    </li>
+                </ul>
+                <% } %>
     </nav>
 </header>
 
 <body>
 </body>
+<script src="../../js/index.js"></script>
 
 </html>
