--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -50,7 +50,11 @@
   </div>
 
   <div class="container-fluid">
+    <div class="features-section">
+      <h1 style="text-align: center;">Features</h1>
+    </div>
   </div>
+  
   <script src="../js/index.js"></script>
 
 </html>
