Moved index.js to public dir

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,10 +3,10 @@
 
 <head>
   <title>Login</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <header>
   <% include ./partials/header %>
+  <script src="../public/index.js"></script>
 </header>
 
 <body>
@@ -21,6 +21,5 @@
       <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign in</button>
     </form>
     </div>
-  <script src="../js/index.js"></script>
 
 </html>
