--- a/src/views/partials/message.ejs
+++ b/src/views/partials/message.ejs
@@ -1,5 +1,7 @@
 <% if (req.query.message && typeof req.query.message == 'string') {
-  req.query.message.split(',').forEach(text=>{%>
+  req.query.message.split(',').forEach(text=>{
+    text = text.split('+').join(' ');
+    %>
     <div class='message'>
       <%= text %>
     </div>
