--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,13 +10,16 @@
 
 <body>
   <div class="container-fluid">
-    <% include ./partials/message %>
-    <form action='/auth/login'>
-      <input type='text' placeholder='Username' name='username'>
-      <input type='password' placeholder='Password' name='password'>
-      <input type='submit' value='Log In'>
-    </form>
-  </div>
-<script src="../js/index.js"></script>
 
+    <% include ./partials/message %>
+    <form action='/auth/login' style="margin-right: 30%; margin-left: 30%" class="form-signin">
+      <h2 class="form-signin-heading">Please sign in</h2>
+      <label for="inputEmail" class="sr-only">Username</label>
+      <input class="form-control" type='text' placeholder='Username' name='username' required autofocus>
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input class="form-control" type='password' placeholder='Password' name='password' required>
+      <button type='submit' value='Log In' class="btn btn-lg btn-primary btn-block">Sign in</button>
+    </form>
+    </div>
+    <script src="../js/index.js"></script>
 </html>
