Fade added to homepage

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-xl-4">
             <img class="glyphicons" src="http://www.businesseffect.gr/images/book_glyphicon2.png">
-            <h1 style="   color: #000000; text-align: center; margin-top: 15px;">Study.</h1>
+            <h1 style="color: #000000; text-align: center; margin-top: 15px;">Study.</h1>
           </div>
 
 
@@ -52,6 +52,28 @@
   <div class="container-fluid">
     <div class="features-section">
       <h1 style="text-align: center;">Features</h1>
+      <div class="row">
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+        <div class="col-lg-4">
+          <h1>Sample</h1>
+        </div>
+      </div>
     </div>
   </div>
 
