--- a/src/public/style.css
+++ b/src/public/style.css
@@ -4,15 +4,17 @@
   color: #000000;
   font-family: Optima, sans-serif;
   padding-top: 2%;
+  text-shadow: 0 0px 14px #4c4c4cb8;
 }
 
 #homepage-info-text{
   margin-left: 20%;
   margin-right: 20%;
-  font-size: 24px;
+  font-size: 26px;
   text-align: center;
   font-family: Optima, sans-serif;
   color: #000000;
+  text-shadow: 0 0px 14px #4c4c4cb8;
 }
 
 .intro-section{
@@ -21,11 +23,11 @@
   -webkit-background-size:cover;
   -moz-background-size:cover;
   -o-background-size:cover;
-  background-size:cover;
+  background-size:stretch;
   background-position:center;
   height: 900px;
-  margin-left: -15px;
-  margin-right: -11px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 .glyphicons{
