--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -27,7 +27,7 @@
 
           <div class="col-xl-4">
             <img class="glyphicons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/User_font_awesome.svg/1000px-User_font_awesome.svg.png">
-            <h1 style="  color: #000000; text-align: center; margin-top: 15px;">Get Help.</h1>
+            <h1 style="color: #000000; text-align: center; margin-top: 15px;">Get Help.</h1>
           </div>
 
           <div class="col-xl-4">
@@ -54,24 +54,35 @@
       <h1 style="text-align: center;">Features</h1>
       <div class="row">
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
         </div>
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
+
         </div>
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
+
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
+
         </div>
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
+
         </div>
         <div class="col-lg-4">
-          <h1>Sample</h1>
+          <h1 class="glyphicons">Sample</h1>
+          <img src="http://www.kinyu-z.net/data/wallpapers/1/703659.jpg">
+
         </div>
       </div>
     </div>
